<resources>
    <string name="app_name">JoTime</string>
    <string name="enter_id">Введите номер карты</string>
    <string name="enter">enter</string>
    <string name="interval">Интервал</string>
    <string name="dash">-</string>
    <string name="graph">Список</string>
    <string name="missing_time">Пропуск</string>
    <string name="date">Дата</string>
    <string name="no_connection_to_wi_fi">Нет подключения к wi-fi</string>
    <string name="error_loading_data">Ошибка загрузки данных</string>
    <string name="title_main_activity">jo.time - Отчет (сотрудник)</string>
    <string name="choose_new_id">Напишите новый номер карты</string>
    <string name="ok">ок</string>
    <string name="cancel">отмена</string>
    <string name="fill_id">Заполните номер карты</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_id_card">Не указана карта</string>
    <string name="update">обновить</string>
</resources>
