<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.jotime.ui.activities.MainActivity">

    <com.example.user.jotime.ui.customView.PersonTextView
        android:id="@+id/title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_main_activity"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/margin_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/title_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.example.user.jotime.ui.customView.DateTextView
        android:id="@+id/from_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        app:layout_constraintBaseline_toBaselineOf="@+id/centre_interval"
        app:layout_constraintRight_toLeftOf="@+id/centre_interval"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/centre_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dash"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_interval"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.example.user.jotime.ui.customView.DateTextView
        android:id="@+id/till_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        app:layout_constraintBaseline_toBaselineOf="@+id/centre_interval"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/centre_interval" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/graph"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/margin_main_activity"
        app:layout_constraintTop_toBottomOf="@+id/centre_interval"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        android:id="@+id/title_graph" />

    <TextView
        android:id="@+id/missing_time_header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_time"
        app:layout_constraintRight_toLeftOf="@+id/date_header_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_graph" />

    <TextView
        android:id="@+id/date_header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_graph"
        app:layout_constraintLeft_toRightOf="@+id/missing_time_header_list" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/missing_time_header_list" />

</android.support.constraint.ConstraintLayout>
